syntax="proto3";

package gravity_pb;

import "Dir.proto";

message GravitySwitchEntity {
	float posX = 1;
	float posY = 2;
	float posZ = 3;
	Dir dir = 4;
}
